# VulkanEngine

./: CMakeLists.txt  renderer.ixx
engine/: CMakeLists.txt  core.cpp  core.hpp  logger.cpp  logger.hpp  physical-device-selector.cpp  physical-device-selector.hpp
engine/app/: app.hpp
include/: CMakeLists.txt
vk/: CMakeLists.txt  buffers.cpp  buffers.hpp  descriptors.cpp  descriptors.cxx  descriptors.hpp  descriptors.ixx  framebuffer.cpp  framebuffer.cxx  framebuffer.hpp  handle.hpp  image-view.cpp  image-view.hpp  image.hpp  instance.cpp  instance.hpp  instance.ixx  offset.cpp  offset.hpp  queue.cpp  queue.hpp  ref.hpp  ref.ixx  result.cpp  result.hpp  size.hpp  swapchain.cxx  swapchain.ixx  version.hpp  vk.ixx  window.cpp  window.cxx  window.hpp  window.ixx
vk/buffers/: buffer.cxx
vk/commands/: buffer.cpp  buffer.cxx  buffer.hpp  buffer.ixx  pool.cpp  pool.cxx  pool.hpp
vk/device/: device.cpp  device.hpp  device.ixx  memory.cpp  memory.cxx  memory.hpp  memory.ixx  physical.cpp  physical.hpp
vk/enums/: buffer-usage-flags.hpp  buffer-usage.cpp  buffer-usage.hpp  format.hpp  index-type.hpp  memory-map-flags.hpp  memory-map.cpp  memory-map.hpp  memory-properties.hpp  memory-property-flags.hpp  shader-stage.hpp  sharing-mode.hpp
vk/khr/: surface-capabilities.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp
vk/pipeline/: graphics.cpp  graphics.hpp  layout.cpp  layout.hpp  layout.ixx  pipeline.cpp  pipeline.hpp  pipeline.ixx  renderPass.cpp  renderPass.cxx  renderPass.hpp
vk/shaders/: shader.cpp  shader.hpp  shaderModule.cpp  shaderModule.hpp
vk/structs/: attachmentDescription.hpp  clearValue.hpp  extent2d.hpp  rect2d.hpp  rect2d.ixx  subpassDependency.hpp  subpassDescription.hpp  vertexInputBindingDescription.hpp  viewport.hpp  viewport.ixx
vk/structs/info/: instanceCreate.ixx  memoryAllocate.ixx  shaderModuleCreate.ixx
vk/structs/info/commands/: renderPassBegin.ixx
vk/sync/: fence.cpp  fence.hpp  semaphore.cpp  semaphore.hpp
vk/util/: log.hpp  log.ixx  util.ixx  vk-logger.cpp  vk-logger.hpp
